Fixed text layer beeing out of alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -167,3 +167,7 @@ span.ripple-fade-out {
     transform: scale(3);
   }
 }
+
+.react-pdf__Document {
+  line-height: 1;
+}
